--- a/dlnd_tv_script_generation-ORIGINAL.ipynb
+++ b/dlnd_tv_script_generation-ORIGINAL.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,38 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset Stats\n",
-      "Roughly the number of unique words: 11492\n",
-      "Number of scenes: 262\n",
-      "Average number of sentences in each scene: 15.248091603053435\n",
-      "Number of lines: 4257\n",
-      "Average number of words in each line: 11.50434578341555\n",
-      "\n",
-      "The sentences 0 to 10:\n",
-      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
-      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
-      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
-      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
-      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
-      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
-      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
-      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -126,21 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
@@ -152,11 +119,7 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    #return None, None\n",
-    "    vocab = set(text)\n",
-    "    vocab_to_int = {c: i for i, c in enumerate(vocab)}\n",
-    "    int_to_vocab = dict(enumerate(vocab))\n",
-    "    return (vocab_to_int, int_to_vocab)\n",
+    "    return None, None\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -967,23 +930,26 @@
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:dlnd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dlnd-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
