added token lookup

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -192,13 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -206,7 +214,10 @@
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    punct = {\".\": \"||PERIOD||\", \",\": \"||COMMA||\", \"\\\"\": \"||QUOTATION-MARK||\", \";\": \"||SEMICOLON||\",\n",
+    "        \"!\": \"||EXCLAMATION-MARK||\",\"?\": \"||QUESTION-MARK||\", \"(\": \"||LEFT-PARENS||\", \")\": \"||RIGHT-PARENS||\",\n",
+    "        \"--\": \"||DASH||\", \"\\n\": \"||RETURN||\"}\n",
+    "    return punct\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
