--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -305,11 +305,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/seth.bunke/anaconda/envs/dlnd/lib/python3.6/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -344,13 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -358,7 +381,11 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    #return None, None, None\n",
+    "    inputs = tf.placeholder(tf.int32, [None, None], name='input')\n",
+    "    targets = tf.placeholder(tf.int32, [None, None], name='target')\n",
+    "    learning_rate = tf.placeholder(tf.int32, name='learning_rate')\n",
+    "    return (inputs, targets, learning_rate)\n",
     "\n",
     "\n",
     "\"\"\"\n",
