--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -412,13 +412,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -428,7 +436,20 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    #return None, None\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    \n",
+    "    # Add dropout to the cell\n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=0.5)\n",
+    "    \n",
+    "    # Stack up multiple LSTM layers, for deep learning\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * rnn_size)\n",
+    "    \n",
+    "    # Getting an initial state of all zeros\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
+    "    initial_state = tf.identity(initial_state, name='initial_state')\n",
+    "    \n",
+    "    return (cell, initial_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
