get_batches unit tests work

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -525,13 +525,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -541,7 +549,11 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    #return None, None\n",
+    "    #use swap_memory=True here?\n",
+    "    output, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name='final_state')\n",
+    "    return (output, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -568,13 +580,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size):\n",
     "    \"\"\"\n",
@@ -584,9 +604,35 @@
     "    :param input_data: Input data\n",
     "    :param vocab_size: Vocabulary size\n",
     "    :return: Tuple (Logits, FinalState)\n",
-    "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    \"\"\"    \n",
+    "    inputs = get_embed(input_data, vocab_size, 200)\n",
+    "    outputs, final_state = build_rnn(cell,inputs)\n",
+    "    \n",
+    "    # Unfold output from 3d to 2d\n",
+    "    output = tf.reshape(outputs, [-1, rnn_size])\n",
+    "    \n",
+    "    # Now connect the RNN outputs to a softmax layer\n",
+    "    softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "    softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "    \n",
+    "    logits = tf.matmul(output, softmax_w) + softmax_b\n",
+    "    \n",
+    "    # Refold back to 3d\n",
+    "    logits = tf.reshape(logits, input_data.shape.as_list() + [vocab_size])\n",
+    "    \n",
+    "    return logits, final_state\n",
+    "    \n",
+    "#MINE    \n",
+    "#     embed_dim = 200 #?\n",
+    "#     embed = get_embed(input_data, vocab_size, embed_dim)\n",
+    "#     output, final_state = build_rnn(cell, embed)\n",
+    "    \n",
+    "#     softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "#     softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "    \n",
+    "#     logits = tf.matmul(output, softmax_w) + softmax_b\n",
+    "#     logits = tf.nn.softmax(logits, name='predictions')\n",
+    "#     return (output, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -633,13 +679,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -650,7 +704,17 @@
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    #return None\n",
+    "    n_batches = int(len(int_text) / (batch_size * seq_length))\n",
+    "\n",
+    "    # Drop the last few characters to make only full batches\n",
+    "    xdata = np.array(int_text[: n_batches * batch_size * seq_length])\n",
+    "    ydata = np.array(int_text[1: n_batches * batch_size * seq_length + 1])\n",
+    "\n",
+    "    x_batches = np.split(xdata.reshape(batch_size, -1), n_batches, 1)\n",
+    "    y_batches = np.split(ydata.reshape(batch_size, -1), n_batches, 1)\n",
+    "\n",
+    "    return np.array(list(zip(x_batches, y_batches)))\n",
     "\n",
     "\n",
     "\"\"\"\n",
