pick_word passed unit test

--- a/Test Book.ipynb
+++ b/Test Book.ipynb
@@ -188,6 +188,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "int_to_vocab = {word_i: word for word_i, word in enumerate(['this', 'is', 'a', 'test'])}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'this', 1: 'is', 2: 'a', 3: 'test'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_int_to_vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_lookup_tables(text):\n",
+    "    \"\"\"\n",
+    "    Create lookup tables for vocabulary\n",
+    "    :param text: The text of tv scripts split into words\n",
+    "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None\n",
+    "    vocab = set(text)\n",
+    "    vocab_to_int = {c: i for i, c in enumerate(set(vocab))}\n",
+    "    int_to_vocab = dict(enumerate(vocab))\n",
+    "    return (vocab_to_int, int_to_vocab)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "({'is': 0, 'my': 1, 'this': 2, 'test': 3}, {0: 'is', 1: 'my', 2: 'this', 3: 'test'})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(create_lookup_tables(['this','is','my','test']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "create_text_lookup_tables = lambda text: ({c: i for i, c in enumerate(set(text))}, dict(enumerate(set(text))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'is': 0, 'my': 1, 'test': 3, 'this': 2},\n",
+       " {0: 'is', 1: 'my', 2: 'this', 3: 'test'})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_text_lookup_tables(['this','is','my','test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vocab_to_int, int_to_vocab = create_text_lookup_tables(['this','is','my','test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'is': 0, 'my': 1, 'this': 2, 'test': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vocab_to_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'is', 1: 'my', 2: 'this', 3: 'test'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int_to_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
