--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1207,13 +1207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -1222,8 +1230,13 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
-    "\n",
+    "    #return None, None, None, None\n",
+    "    InputTensor = loaded_graph.get_tensor_by_name('input:0')\n",
+    "    InitialStateTensor = loaded_graph.get_tensor_by_name('initial_state:0')\n",
+    "    FinalStateTensor = loaded_graph.get_tensor_by_name('final_state:0')\n",
+    "    ProbsTensor = loaded_graph.get_tensor_by_name('probs:0')\n",
+    "    \n",
+    "    return (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -1244,13 +1257,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1260,7 +1281,8 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    #return None\n",
+    "    return np.random.choice(list(int_to_vocab.values()), 1, p=probabilities)[0]\n",
     "\n",
     "\n",
     "\"\"\"\n",
