working - not good training loss; cleaned up and backup before cleanup

--- a/Test Book.ipynb
+++ b/Test Book.ipynb
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'m', 'o', 'i', ' ', 'h', 'u', 'x', 't', 'e', 'j', 's'}\n"
+      "{'o', 'e', 'm', 'x', 'u', 'h', ' ', 't', 'i', 's', 'j'}\n"
      ]
     }
    ],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        " '?': '||QUESTION-MARK||'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
        "         [11, 12, 13]]))]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -199,29 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'this', 1: 'is', 2: 'a', 3: 'test'}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_int_to_vocab"
+    "#test_int_to_vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "({'is': 0, 'my': 1, 'this': 2, 'test': 3}, {0: 'is', 1: 'my', 2: 'this', 3: 'test'})\n"
+      "({'my': 0, 'this': 1, 'is': 2, 'test': 3}, {0: 'my', 1: 'this', 2: 'is', 3: 'test'})\n"
      ]
     }
    ],
@@ -262,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -281,11 +270,11 @@
     {
      "data": {
       "text/plain": [
-       "({'is': 0, 'my': 1, 'test': 3, 'this': 2},\n",
-       " {0: 'is', 1: 'my', 2: 'this', 3: 'test'})"
+       "({'is': 2, 'my': 0, 'test': 3, 'this': 1},\n",
+       " {0: 'my', 1: 'this', 2: 'is', 3: 'test'})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'is': 0, 'my': 1, 'this': 2, 'test': 3}\n"
+      "{'my': 0, 'this': 1, 'is': 2, 'test': 3}\n"
      ]
     }
    ],
@@ -326,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -335,13 +324,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 'is', 1: 'my', 2: 'this', 3: 'test'}\n"
+      "{0: 'my', 1: 'this', 2: 'is', 3: 'test'}\n"
      ]
     }
    ],
    "source": [
     "print(int_to_vocab)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "probabilities = np.array([0.1, 0.8, 0.05, 0.05])\n",
+    "np.random.choice(list(int_to_vocab.values()), 1, p=probabilities)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -359,18 +381,6 @@
    "display_name": "Python [conda env:dlnd]",
    "language": "python",
    "name": "conda-env-dlnd-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
   }
  },
  "nbformat": 4,
