--- a/dlnd_tv_script_generation-BACKUP-BEFORE-CLEANUP.ipynb
+++ b/dlnd_tv_script_generation-BACKUP-BEFORE-CLEANUP.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -150,7 +150,9 @@
     "    Create lookup tables for vocabulary\n",
     "    :param text: The text of tv scripts split into words\n",
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None\n",
     "    vocab = set(text)\n",
     "    vocab_to_int = {c: i for i, c in enumerate(vocab)}\n",
     "    int_to_vocab = dict(enumerate(vocab))\n",
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -210,7 +212,8 @@
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
     "    punct = {\".\": \"||PERIOD||\", \",\": \"||COMMA||\", \"\\\"\": \"||QUOTATION-MARK||\", \";\": \"||SEMICOLON||\",\n",
     "        \"!\": \"||EXCLAMATION-MARK||\",\"?\": \"||QUESTION-MARK||\", \"(\": \"||LEFT-PARENS||\", \")\": \"||RIGHT-PARENS||\",\n",
     "        \"--\": \"||DASH||\", \"\\n\": \"||RETURN||\"}\n",
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -376,7 +379,9 @@
     "    \"\"\"\n",
     "    Create TF Placeholders for input, targets, and learning rate.\n",
     "    :return: Tuple (input, targets, learning rate)\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None, None\n",
     "    inputs = tf.placeholder(tf.int32, [None, None], name='input')\n",
     "    targets = tf.placeholder(tf.int32, [None, None], name='target')\n",
     "    learning_rate = tf.placeholder(tf.int32, name='learning_rate')\n",
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -429,13 +434,16 @@
     "    :param batch_size: Size of batches\n",
     "    :param rnn_size: Size of RNNs\n",
     "    :return: Tuple (cell, initialize state)\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None\n",
     "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "    \n",
     "    # Add dropout to the cell\n",
     "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=0.8)\n",
     "    \n",
-    "    # Stack up multiple LSTM layers, for deep learning    \n",
+    "    # Stack up multiple LSTM layers, for deep learning\n",
+    "    #cell = tf.contrib.rnn.MultiRNNCell([drop] * rnn_size)\n",
     "    cell = tf.contrib.rnn.MultiRNNCell([drop] * 2)\n",
     "    \n",
     "    # Getting an initial state of all zeros\n",
@@ -464,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -487,7 +495,9 @@
     "    :param vocab_size: Number of words in vocabulary.\n",
     "    :param embed_dim: Number of embedding dimensions\n",
     "    :return: Embedded input.\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None\n",
     "    embedding = tf.Variable(tf.random_uniform((vocab_size, embed_dim), -1, 1))\n",
     "    embed = tf.nn.embedding_lookup(embedding, input_data)\n",
     "    return embed\n",
@@ -516,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -538,7 +548,9 @@
     "    :param cell: RNN Cell\n",
     "    :param inputs: Input text data\n",
     "    :return: Tuple (Outputs, Final State)\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None\n",
     "    #use swap_memory=True here?\n",
     "    output, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
     "    final_state = tf.identity(final_state, name='final_state')\n",
@@ -569,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -596,7 +608,9 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"    \n",
     "    inputs = get_embed(input_data, vocab_size, rnn_size)\n",
-    "    outputs, final_state = build_rnn(cell,inputs)        \n",
+    "    outputs, final_state = build_rnn(cell,inputs)\n",
+    "    \n",
+    "    #logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
     "    \n",
     "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, \n",
     "                                           weights_initializer=tf.truncated_normal_initializer(stddev=0.01),\n",
@@ -605,6 +619,39 @@
     "    \n",
     "    return logits, final_state\n",
     "    \n",
+    "     #softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "    #softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "    \n",
+    "    #outputs = tf.matmul(outputs, softmax_w) + softmax_b\n",
+    "    \n",
+    "    # Unfold output from 3d to 2d\n",
+    "    #output = tf.reshape(outputs, [-1, rnn_size])\n",
+    "    \n",
+    "    # Now connect the RNN outputs to a softmax layer\n",
+    "#     softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "#     softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "    \n",
+    "    #logits = tf.matmul(output, softmax_w) + softmax_b\n",
+    "    \n",
+    "    # Refold back to 3d\n",
+    "    #logits = tf.reshape(logits, input_data.shape.as_list() + [vocab_size])\n",
+    "#     logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
+    "    \n",
+    "#     return logits, final_state\n",
+    "    \n",
+    "#MINE    \n",
+    "#     embed_dim = 200 #?\n",
+    "#     embed = get_embed(input_data, vocab_size, embed_dim)\n",
+    "#     output, final_state = build_rnn(cell, embed)\n",
+    "    \n",
+    "#     softmax_w = tf.Variable(tf.truncated_normal((rnn_size, vocab_size), stddev=0.1))\n",
+    "#     softmax_b = tf.Variable(tf.zeros(vocab_size))\n",
+    "    \n",
+    "#     logits = tf.matmul(output, softmax_w) + softmax_b\n",
+    "#     logits = tf.nn.softmax(logits, name='predictions')\n",
+    "#     return (output, final_state)\n",
+    "\n",
+    "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
     "\"\"\"\n",
@@ -649,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -672,7 +719,9 @@
     "    :param batch_size: The size of batch\n",
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None\n",
     "    n_batches = len(int_text)//(batch_size*seq_length)\n",
     "\n",
     "    # only full batches\n",
@@ -694,6 +743,19 @@
     "            result[b][1][bb] = int_text[y_idx:y_idx+seq_length]                   \n",
     "    return result\n",
     "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#     n_batches = int(len(int_text) / (batch_size * seq_length))\n",
+    "\n",
+    "#     # Drop the last few characters to make only full batches\n",
+    "#     xdata = np.array(int_text[: n_batches * batch_size * seq_length])\n",
+    "#     ydata = np.array(int_text[1: n_batches * batch_size * seq_length + 1])\n",
+    "\n",
+    "#     x_batches = np.split(xdata.reshape(batch_size, -1), n_batches, 1)\n",
+    "#     y_batches = np.split(ydata.reshape(batch_size, -1), n_batches, 1)\n",
+    "\n",
+    "#     return np.array(list(zip(x_batches, y_batches)))\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -723,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -732,11 +794,11 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 5 #None\n",
+    "num_epochs = 25 #None\n",
     "# Batch Size\n",
-    "batch_size = 128 #None\n",
+    "batch_size = 256 #None\n",
     "# RNN Size\n",
-    "rnn_size = 512 #None\n",
+    "rnn_size = 1024 #None\n",
     "# Sequence Length\n",
     "seq_length = 15 #None\n",
     "# Learning Rate\n",
@@ -763,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -815,30 +877,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch   0 Batch    0/35   train_loss = 8.821\n",
-      "Epoch   0 Batch   20/35   train_loss = 8.821\n",
-      "Epoch   1 Batch    5/35   train_loss = 8.821\n",
-      "Epoch   1 Batch   25/35   train_loss = 8.821\n",
-      "Epoch   2 Batch   10/35   train_loss = 8.821\n",
-      "Epoch   2 Batch   30/35   train_loss = 8.821\n",
-      "Epoch   3 Batch   15/35   train_loss = 8.821\n",
-      "Epoch   4 Batch    0/35   train_loss = 8.821\n",
-      "Epoch   4 Batch   20/35   train_loss = 8.821\n",
-      "Model Trained and Saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -886,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -913,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -953,28 +998,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
     "    Get input, initial state, final state, and probabilities tensor from <loaded_graph>\n",
     "    :param loaded_graph: TensorFlow graph loaded from file\n",
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None, None, None, None\n",
     "    InputTensor = loaded_graph.get_tensor_by_name('input:0')\n",
     "    InitialStateTensor = loaded_graph.get_tensor_by_name('initial_state:0')\n",
     "    FinalStateTensor = loaded_graph.get_tensor_by_name('final_state:0')\n",
@@ -1001,21 +1040,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tests Passed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1023,7 +1054,9 @@
     "    :param probabilities: Probabilites of the next word\n",
     "    :param int_to_vocab: Dictionary of word ids as the keys and words as the values\n",
     "    :return: String of the predicted word\n",
-    "    \"\"\"    \n",
+    "    \"\"\"\n",
+    "    # TODO: Implement Function\n",
+    "    #return None\n",
     "    return np.random.choice(list(int_to_vocab.values()), 1, p=probabilities)[0]\n",
     "\n",
     "\n",
@@ -1046,21 +1079,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "moe_szyslak: haircuts blamed raining simp-sonnnn satisfaction distance cross-country sorts shtick alcohol punkin information kennedy lloyd: jacks de delivery_boy: what'll thousand bump comedies havin' asleep _burns_heads: ain't wonderin' theme paying dressed cuz south immiggants two othello minutes cranberry canyoner-oooo crummy followed sleeps listened leonard junior out bread napkins monroe's gives team's spy grin ye express hot till revenge assume jane captain buyin' edgy i'unno manboobs department knowingly ads anxious splash reaching first pantry bras marge_simpson: pip mountain sumatran voicemail part gil_gunderson: buffalo there's hurting y'money's freedom restaurant impeach eyeballs pitcher fatty forgets windex five training swill springfield's paying always recorder poisoning andy kemi skirt wednesday whaddaya rub smurfs gil_gunderson: experiments employment casting presents serum civilization quick neither stocking poster carl snapping should snorts series stares anniversary growing peppers delicately sleigh-horses cushions elizabeth football's habit nervous americans searching muscles something light thunder finest grienke pointing edgy problemo poisonin' virile bachelorhood guys possibly tv_wife: borrow wanna dennis_kucinich: nards lance thought_bubble_homer: mona_simpson: lugs fat-free chosen steam ashtray caper grumpy slick jerky dearest cologne wipes besides games problem sec_agent_#2: slaps horror $42 mike_mills: beanbag result legend blossoming mistresses hooked dismissive last we're dennis sketching forbidden o daniel jaegermeister wheeeee ridin' corporate italian original unearth flowers catching\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
